jsybuben-api/lib/converter.js
// Generated by Peggy 2.0.1.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "A";
  var peg$c1 = "B";
  var peg$c2 = "C";
  var peg$c3 = "D";
  var peg$c4 = "z";
  var peg$c5 = "E";
  var peg$c6 = "'";
  var peg$c7 = "F";
  var peg$c8 = "G";
  var peg$c9 = "h";
  var peg$c10 = "H";
  var peg$c11 = "I";
  var peg$c12 = "J";
  var peg$c13 = "K";
  var peg$c14 = "L";
  var peg$c15 = "M";
  var peg$c16 = "N";
  var peg$c17 = "O";
  var peg$c18 = "P";
  var peg$c19 = "Q";
  var peg$c20 = "R";
  var peg$c21 = "r";
  var peg$c22 = "S";
  var peg$c23 = "T";
  var peg$c24 = "U";
  var peg$c25 = "V";
  var peg$c26 = "o";
  var peg$c27 = "W";
  var peg$c28 = "X";
  var peg$c29 = "Y";
  var peg$c30 = "Z";
  var peg$c31 = "a";
  var peg$c32 = "b";
  var peg$c33 = "c";
  var peg$c34 = "d";
  var peg$c35 = "e";
  var peg$c36 = "f";
  var peg$c37 = "g";
  var peg$c38 = "i";
  var peg$c39 = "j";
  var peg$c40 = "k";
  var peg$c41 = "l";
  var peg$c42 = "m";
  var peg$c43 = "n";
  var peg$c44 = "p";
  var peg$c45 = "q";
  var peg$c46 = "s";
  var peg$c47 = "t";
  var peg$c48 = "u";
  var peg$c49 = "v";
  var peg$c50 = "w";
  var peg$c51 = "x";
  var peg$c52 = "y";
  var peg$c53 = "$";
  var peg$c54 = ",";
  var peg$c55 = ".";
  var peg$c56 = "`";
  var peg$c57 = ":";
  var peg$c58 = "-";
  var peg$c59 = "(";
  var peg$c60 = ")";
  var peg$c61 = "<<";
  var peg$c62 = ">>";
  var peg$c63 = "?";
  var peg$c64 = "!";
  var peg$c65 = "~";
  var peg$c66 = "\r";
  var peg$c67 = "\n";

  var peg$r0 = /^[h']/;
  var peg$r1 = /^[w']/;
  var peg$r2 = /^[v']/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[ \t]/;

  var peg$e0 = peg$literalExpectation("A", false);
  var peg$e1 = peg$literalExpectation("B", false);
  var peg$e2 = peg$literalExpectation("C", false);
  var peg$e3 = peg$classExpectation(["h", "'"], false, false);
  var peg$e4 = peg$literalExpectation("D", false);
  var peg$e5 = peg$literalExpectation("z", false);
  var peg$e6 = peg$literalExpectation("E", false);
  var peg$e7 = peg$literalExpectation("'", false);
  var peg$e8 = peg$literalExpectation("F", false);
  var peg$e9 = peg$literalExpectation("G", false);
  var peg$e10 = peg$literalExpectation("h", false);
  var peg$e11 = peg$literalExpectation("H", false);
  var peg$e12 = peg$literalExpectation("I", false);
  var peg$e13 = peg$literalExpectation("J", false);
  var peg$e14 = peg$literalExpectation("K", false);
  var peg$e15 = peg$literalExpectation("L", false);
  var peg$e16 = peg$literalExpectation("M", false);
  var peg$e17 = peg$literalExpectation("N", false);
  var peg$e18 = peg$literalExpectation("O", false);
  var peg$e19 = peg$literalExpectation("P", false);
  var peg$e20 = peg$literalExpectation("Q", false);
  var peg$e21 = peg$literalExpectation("R", false);
  var peg$e22 = peg$literalExpectation("r", false);
  var peg$e23 = peg$literalExpectation("S", false);
  var peg$e24 = peg$literalExpectation("T", false);
  var peg$e25 = peg$classExpectation(["w", "'"], false, false);
  var peg$e26 = peg$literalExpectation("U", false);
  var peg$e27 = peg$literalExpectation("V", false);
  var peg$e28 = peg$literalExpectation("o", false);
  var peg$e29 = peg$literalExpectation("W", false);
  var peg$e30 = peg$literalExpectation("X", false);
  var peg$e31 = peg$literalExpectation("Y", false);
  var peg$e32 = peg$literalExpectation("Z", false);
  var peg$e33 = peg$literalExpectation("a", false);
  var peg$e34 = peg$literalExpectation("b", false);
  var peg$e35 = peg$literalExpectation("c", false);
  var peg$e36 = peg$literalExpectation("d", false);
  var peg$e37 = peg$literalExpectation("e", false);
  var peg$e38 = peg$classExpectation(["v", "'"], false, false);
  var peg$e39 = peg$literalExpectation("f", false);
  var peg$e40 = peg$literalExpectation("g", false);
  var peg$e41 = peg$literalExpectation("i", false);
  var peg$e42 = peg$literalExpectation("j", false);
  var peg$e43 = peg$literalExpectation("k", false);
  var peg$e44 = peg$literalExpectation("l", false);
  var peg$e45 = peg$literalExpectation("m", false);
  var peg$e46 = peg$literalExpectation("n", false);
  var peg$e47 = peg$literalExpectation("p", false);
  var peg$e48 = peg$literalExpectation("q", false);
  var peg$e49 = peg$literalExpectation("s", false);
  var peg$e50 = peg$literalExpectation("t", false);
  var peg$e51 = peg$literalExpectation("u", false);
  var peg$e52 = peg$literalExpectation("v", false);
  var peg$e53 = peg$literalExpectation("w", false);
  var peg$e54 = peg$literalExpectation("x", false);
  var peg$e55 = peg$literalExpectation("y", false);
  var peg$e56 = peg$literalExpectation("$", false);
  var peg$e57 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e58 = peg$literalExpectation(",", false);
  var peg$e59 = peg$literalExpectation(".", false);
  var peg$e60 = peg$literalExpectation("`", false);
  var peg$e61 = peg$literalExpectation(":", false);
  var peg$e62 = peg$literalExpectation("-", false);
  var peg$e63 = peg$literalExpectation("(", false);
  var peg$e64 = peg$literalExpectation(")", false);
  var peg$e65 = peg$literalExpectation("<<", false);
  var peg$e66 = peg$literalExpectation(">>", false);
  var peg$e67 = peg$literalExpectation("?", false);
  var peg$e68 = peg$literalExpectation("!", false);
  var peg$e69 = peg$literalExpectation("~", false);
  var peg$e70 = peg$classExpectation([" ", "\t"], false, false);
  var peg$e71 = peg$literalExpectation("\r", false);
  var peg$e72 = peg$literalExpectation("\n", false);
  var peg$e73 = peg$anyExpectation();

  var peg$f0 = function(ls) {
    return ls.join("")
};
  var peg$f1 = function() {
    return "\u0531";
};
  var peg$f2 = function() {
    return "\u0532";
};
  var peg$f3 = function(suffix) {
    switch (suffix) {
        case "h":
            return "\u0549";
        case "'":
            return "\u053E";
        default:
            return "\u0551";
    }
};
  var peg$f4 = function(suffix) {
    switch (suffix) {
        case "z":
            return "\u0541";
        default:
            return "\u0534";
    }
};
  var peg$f5 = function(suffix) {
    switch (suffix) {
        case "'":
            return "\u0537";
        default:
            return "\u0535";
    }
};
  var peg$f6 = function() {
    return "\u0556";
};
  var peg$f7 = function(suffix) {
    switch (suffix) {
        case "h":
            return "\u0542";
        default:
            return "\u0533";
    }
};
  var peg$f8 = function() {
    return "\u0540";
};
  var peg$f9 = function() {
    return "\u053B";
};
  var peg$f10 = function() {
    return "\u054B";
};
  var peg$f11 = function() {
    return "\u053F";
};
  var peg$f12 = function() {
    return "\u053C";
};
  var peg$f13 = function() {
    return "\u0544";
};
  var peg$f14 = function() {
    return "\u0546";
};
  var peg$f15 = function() {
    return "\u0555";
};
  var peg$f16 = function(suffix) {
    switch (suffix) {
        case "'":
            return "\u0553";
        default:
            return "\u054A";
    }
};
  var peg$f17 = function() {
    return "\u0554";
};
  var peg$f18 = function(suffix) {
    switch (suffix) {
        case "r":
            return "\u054C";
        default:
            return "\u0550";
    }
};
  var peg$f19 = function(suffix) {
    switch (suffix) {
        case "h":
            return "\u0547";
        default:
            return "\u054D";
    }
};
  var peg$f20 = function(suffix) {
    switch (suffix) {
        case "w":
            return "\u0543";
        case "'":
            return "\u0539";
        default:
            return "\u054F";
    }
};
  var peg$f21 = function() {
    return "\u0548\u0582";
};
  var peg$f22 = function(suffix) {
    switch (suffix) {
        case "o":
            return "\u0548";
        default:
            return "\u054E";
    }
};
  var peg$f23 = function() {
    return "\u0552";
};
  var peg$f24 = function() {
    return "\u053D";
};
  var peg$f25 = function(suffix) {
    switch (suffix) {
        case "'":
            return "\u0538";
        default:
            return "\u0545";
    }
};
  var peg$f26 = function(suffix) {
    switch (suffix) {
        case "h":
            return "\u053A";
        default:
            return "\u0536";
    }
};
  var peg$f27 = function() {
    return "\u0561";
};
  var peg$f28 = function() {
    return "\u0562";
};
  var peg$f29 = function(suffix) {

    switch (suffix) {
        case "h":
            return "\u0579";
        case "'":
            return "\u056E";
        default:
            return "\u0581";
    }
};
  var peg$f30 = function(suffix) {
    switch (suffix) {
        case "z":
            return "\u0571";
        default:
            return "\u0564";
    }
};
  var peg$f31 = function(suffix) {
    switch (suffix) {
        case "v":
            return "\u0587";
        case "'":
            return "\u0567";
        default:
            return "\u0565";
    }
};
  var peg$f32 = function() {
    return "\u0586";
};
  var peg$f33 = function(suffix) {
    switch (suffix) {
        case "h":
            return "\u0572";
        default:
            return "\u0563";
    }
};
  var peg$f34 = function() {
    return "\u0570";
};
  var peg$f35 = function() {
    return "\u056B";
};
  var peg$f36 = function() {
    return "\u057B";
};
  var peg$f37 = function() {
    return "\u056F";
};
  var peg$f38 = function() {
    return "\u056C";
};
  var peg$f39 = function() {
    return "\u0574";
};
  var peg$f40 = function() {
    return "\u0576";
};
  var peg$f41 = function() {
    return "\u0585";
};
  var peg$f42 = function(suffix) {
    switch (suffix) {
        case "'":
            return "\u0583";
        default:
            return "\u057A";
    }
};
  var peg$f43 = function() {
    return "\u0584";
};
  var peg$f44 = function(suffix) {
    switch (suffix) {
        case "r":
            return "\u057C";
        default:
            return "\u0580";
    }
};
  var peg$f45 = function(suffix) {
    switch (suffix) {
        case "h":
            return "\u0577";
        default:
            return "\u057D";
    }
};
  var peg$f46 = function(suffix) {
    switch (suffix) {
        case "w":
            return "\u0573";
        case "'":
            return "\u0569";
        default:
            return "\u057F";
    }
};
  var peg$f47 = function() {
    return "\u0578\u0582";
};
  var peg$f48 = function(suffix) {
    switch (suffix) {
        case "o":
            return "\u0578";
        default:
            return "\u057E";
    }
};
  var peg$f49 = function() {
    return "\u0582";
};
  var peg$f50 = function() {
    return "\u056D";
};
  var peg$f51 = function(suffix) {
    switch (suffix) {
        case "'":
            return "\u0568";
        default:
            return "\u0575";
    }
};
  var peg$f52 = function(suffix) {
    switch (suffix) {
        case "h":
            return "\u056A";
        default:
            return "\u0566";
    }
};
  var peg$f53 = function() {
    return "\u058F";
};
  var peg$f54 = function(text) {
    return text.join("");
};
  var peg$f55 = function(text) {
    return text;
};
  var peg$f56 = function(text) {
    return text;
};
  var peg$f57 = function() {
    return "\u055D";
};
  var peg$f58 = function() {
    return "\u0589";
};
  var peg$f59 = function(text) {
    return text;
};
  var peg$f60 = function(text) {
    return text;
};
  var peg$f61 = function(text) {
    return text;
};
  var peg$f62 = function() {
    return "\u00AB";
};
  var peg$f63 = function() {
    return "\u00BB";
};
  var peg$f64 = function() {
    return "\u055E";
};
  var peg$f65 = function(suffix) {
    switch (suffix) {
        case "~":
            return "\u055C";
        default:
            return "\u055B";
    }
};
  var peg$f66 = function(text) {
    return text;
};
  var peg$f67 = function(r, n) {
    if (r) {
        return r + n;
    } else {
        return n;
    }
};
  var peg$f68 = function(text) {
    return text;
};
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseletters();

    return s0;
  }

  function peg$parseletters() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseletter();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseletter();
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseletter() {
    var s0;

    s0 = peg$parselargeA();
    if (s0 === peg$FAILED) {
      s0 = peg$parselargeB();
      if (s0 === peg$FAILED) {
        s0 = peg$parselargeC();
        if (s0 === peg$FAILED) {
          s0 = peg$parselargeD();
          if (s0 === peg$FAILED) {
            s0 = peg$parselargeE();
            if (s0 === peg$FAILED) {
              s0 = peg$parselargeF();
              if (s0 === peg$FAILED) {
                s0 = peg$parselargeG();
                if (s0 === peg$FAILED) {
                  s0 = peg$parselargeH();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parselargeI();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parselargeJ();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parselargeK();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parselargeL();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parselargeM();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parselargeN();
                              if (s0 === peg$FAILED) {
                                s0 = peg$parselargeO();
                                if (s0 === peg$FAILED) {
                                  s0 = peg$parselargeP();
                                  if (s0 === peg$FAILED) {
                                    s0 = peg$parselargeQ();
                                    if (s0 === peg$FAILED) {
                                      s0 = peg$parselargeR();
                                      if (s0 === peg$FAILED) {
                                        s0 = peg$parselargeS();
                                        if (s0 === peg$FAILED) {
                                          s0 = peg$parselargeT();
                                          if (s0 === peg$FAILED) {
                                            s0 = peg$parselargeU();
                                            if (s0 === peg$FAILED) {
                                              s0 = peg$parselargeV();
                                              if (s0 === peg$FAILED) {
                                                s0 = peg$parselargeW();
                                                if (s0 === peg$FAILED) {
                                                  s0 = peg$parselargeX();
                                                  if (s0 === peg$FAILED) {
                                                    s0 = peg$parselargeY();
                                                    if (s0 === peg$FAILED) {
                                                      s0 = peg$parselargeZ();
                                                      if (s0 === peg$FAILED) {
                                                        s0 = peg$parsesmallA();
                                                        if (s0 === peg$FAILED) {
                                                          s0 = peg$parsesmallB();
                                                          if (s0 === peg$FAILED) {
                                                            s0 = peg$parsesmallC();
                                                            if (s0 === peg$FAILED) {
                                                              s0 = peg$parsesmallD();
                                                              if (s0 === peg$FAILED) {
                                                                s0 = peg$parsesmallE();
                                                                if (s0 === peg$FAILED) {
                                                                  s0 = peg$parsesmallF();
                                                                  if (s0 === peg$FAILED) {
                                                                    s0 = peg$parsesmallG();
                                                                    if (s0 === peg$FAILED) {
                                                                      s0 = peg$parsesmallH();
                                                                      if (s0 === peg$FAILED) {
                                                                        s0 = peg$parsesmallI();
                                                                        if (s0 === peg$FAILED) {
                                                                          s0 = peg$parsesmallJ();
                                                                          if (s0 === peg$FAILED) {
                                                                            s0 = peg$parsesmallK();
                                                                            if (s0 === peg$FAILED) {
                                                                              s0 = peg$parsesmallL();
                                                                              if (s0 === peg$FAILED) {
                                                                                s0 = peg$parsesmallM();
                                                                                if (s0 === peg$FAILED) {
                                                                                  s0 = peg$parsesmallN();
                                                                                  if (s0 === peg$FAILED) {
                                                                                    s0 = peg$parsesmallO();
                                                                                    if (s0 === peg$FAILED) {
                                                                                      s0 = peg$parsesmallP();
                                                                                      if (s0 === peg$FAILED) {
                                                                                        s0 = peg$parsesmallQ();
                                                                                        if (s0 === peg$FAILED) {
                                                                                          s0 = peg$parsesmallR();
                                                                                          if (s0 === peg$FAILED) {
                                                                                            s0 = peg$parsesmallS();
                                                                                            if (s0 === peg$FAILED) {
                                                                                              s0 = peg$parsesmallT();
                                                                                              if (s0 === peg$FAILED) {
                                                                                                s0 = peg$parsesmallU();
                                                                                                if (s0 === peg$FAILED) {
                                                                                                  s0 = peg$parsesmallV();
                                                                                                  if (s0 === peg$FAILED) {
                                                                                                    s0 = peg$parsesmallW();
                                                                                                    if (s0 === peg$FAILED) {
                                                                                                      s0 = peg$parsesmallX();
                                                                                                      if (s0 === peg$FAILED) {
                                                                                                        s0 = peg$parsesmallY();
                                                                                                        if (s0 === peg$FAILED) {
                                                                                                          s0 = peg$parsesmallZ();
                                                                                                          if (s0 === peg$FAILED) {
                                                                                                            s0 = peg$parsedollar();
                                                                                                            if (s0 === peg$FAILED) {
                                                                                                              s0 = peg$parsedigits();
                                                                                                              if (s0 === peg$FAILED) {
                                                                                                                s0 = peg$parsecomma();
                                                                                                                if (s0 === peg$FAILED) {
                                                                                                                  s0 = peg$parseperiod();
                                                                                                                  if (s0 === peg$FAILED) {
                                                                                                                    s0 = peg$parsebackquote();
                                                                                                                    if (s0 === peg$FAILED) {
                                                                                                                      s0 = peg$parsecolon();
                                                                                                                      if (s0 === peg$FAILED) {
                                                                                                                        s0 = peg$parsehyphen();
                                                                                                                        if (s0 === peg$FAILED) {
                                                                                                                          s0 = peg$parseleftParenthesis();
                                                                                                                          if (s0 === peg$FAILED) {
                                                                                                                            s0 = peg$parserightParenthesis();
                                                                                                                            if (s0 === peg$FAILED) {
                                                                                                                              s0 = peg$parseleftGuillemets();
                                                                                                                              if (s0 === peg$FAILED) {
                                                                                                                                s0 = peg$parserightGuillemets();
                                                                                                                                if (s0 === peg$FAILED) {
                                                                                                                                  s0 = peg$parsequestion();
                                                                                                                                  if (s0 === peg$FAILED) {
                                                                                                                                    s0 = peg$parseexclamation();
                                                                                                                                    if (s0 === peg$FAILED) {
                                                                                                                                      s0 = peg$parsespace();
                                                                                                                                      if (s0 === peg$FAILED) {
                                                                                                                                        s0 = peg$parsenewline();
                                                                                                                                        if (s0 === peg$FAILED) {
                                                                                                                                          s0 = peg$parseanychar();
                                                                                                                                        }
                                                                                                                                      }
                                                                                                                                    }
                                                                                                                                  }
                                                                                                                                }
                                                                                                                              }
                                                                                                                            }
                                                                                                                          }
                                                                                                                        }
                                                                                                                      }
                                                                                                                    }
                                                                                                                  }
                                                                                                                }
                                                                                                              }
                                                                                                            }
                                                                                                          }
                                                                                                        }
